[package]
name = "timpl"
version = "0.1.0-alpha.2"
edition = "2021"
description = "A simple, yet powerful, template engine."
authors = ["Timon Schelling"]
repository = "https://github.com/timon-schelling/timpl"
documentation = "https://docs.rs/timpl"
license = "MIT"
categories = ["template-engine", "text-processing"]
keywords = ["timpl", "template", "yaml", "html", "text"]

[workspace]
members = ["timpl-internal", "timpl-proc", "timpl-decl"]

[dependencies]
timpl-internal = { version = "0.1.0-alpha.2", path = "timpl-internal" }
timpl-proc = { version = "0.1.0-alpha.2", path = "timpl-proc" }
timpl-decl = { version = "0.1.0-alpha.2", path = "timpl-decl" }

[lib]
test = false
doctest = false

[profile.release]
strip = true
lto = true
codegen-units = 1
