[package]
name = "tpdf"
version = "0.1.0"
edition = "2021"
description = "simple pdf tools"
authors = ["Timon Schelling"]
repository = "https://github.com/timon-schelling/tpdf"
documentation = "https://docs.rs/tpdf"
license = "MIT"
keywords = ["pdf"]

[dependencies]
lopdf = { version = "0.31", features = ["pom_parser", "nom_parser"] }
clap = { version = "4", features = ["default", "unstable-doc"] }
