[package]
name = "timpl-proc"
version = "0.1.0-alpha.1"
edition = "2021"
description = "timpl procedural macros. Not meant to be used directly. Use timpl instead."
authors = ["Timon Schelling"]
repository = "https://github.com/timon-schelling/timpl"
documentation = "https://docs.rs/timpl"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
timpl-internal = { version = "0.1.0-alpha.1", path = "../timpl-internal" }
